--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-content-loader": "^5.1.4",
     "react-dom": "^16.13.1",
     "react-icons-kit": "^1.3.1",
     "react-redux": "^7.2.0",
